started content and css styling on about `A also fixed spacing issue on app title

--- a/css/index.css
+++ b/css/index.css
@@ -113,3 +113,11 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+/*
+    Custom CSS
+ */
+.jobTitleHeader{
+    width: 100%;
+    background-color: green;
+}
